# Kind

./: .gitignore  .gitmodules  CHANGELOG.english.md  CHANGELOG.md  CONTRIBUTE.md  Cargo.toml  DOCUMENTATION.md  FAQ.md  FEATURES.md  FMC_SPECIFICATION.md  Formality.fmc  FormalityCore.cli.js  FormalityCore.fmc  FormalityCore.hs  FormalityCore.js  INSTALL.md  LICENSE  OLD_DOCUMENTATION.md  README.english.md  README.md  STYLE.md  SYNTAX.md  THEOREMS.md  THEOREM_PROVING_TUTORIAL.md  TODO.md  TUTORIAL.md  WISHLIST.md  Whitepaper.md  and.kind  bootstrap.sh  build.js  cabal.project  checker.hvm  clean_code_fm_guide.md  default.nix  example.js  example.kind2  example.md  example.py  flake.nix  (+28 more)
.cache/: app.draw.isct  (+289 more)
crates/kind-checker/: Cargo.toml
crates/kind-checker/src/: checker.hvm  diagnostic.rs  errors.rs  lib.rs  report.rs
crates/kind-checker/src/compiler/: mod.rs  tags.rs
crates/kind-cli/: Cargo.toml  README.md
crates/kind-cli/src/: lib.rs  main.rs
crates/kind-cli/tests/: mod.rs
crates/kind-cli/tests/suite/eval/: User.kind2
crates/kind-derive/: Cargo.toml
crates/kind-derive/src/: diagnostic.rs  errors.rs  getters.rs  lib.rs  matching.rs  mutters.rs  open.rs  record.rs  setters.rs  subst.rs
crates/kind-driver/: Cargo.toml
crates/kind-driver/src/: diagnostic.rs  errors.rs  lib.rs  resolution.rs  session.rs
crates/kind-lexer/: Cargo.toml
crates/kind-lexer/src/: diagnostics.rs  lib.rs  lookahead.rs  tokens.rs
crates/kind-parser/: Cargo.toml  build.rs
crates/kind-parser/src/: diagnostic.rs  diagnostics.rs  errors.rs  expr.rs  lexer.rs  lib.rs  macros.rs  parser.lalrpop  pat.rs  state.rs  tokens.rs
crates/kind-parser/src/lexer/: comments.rs  literals.rs  mod.rs  state.rs  tokens.rs
crates/kind-parser/src/top_level/: attributes.rs  mod.rs  type_decl.rs
crates/kind-pass/: Cargo.toml
crates/kind-pass/src/: diagnostic.rs  errors.rs  lib.rs  subst.rs
crates/kind-pass/src/desugar/: app.rs  attributes.rs  destruct.rs  expr.rs  mod.rs  record_field.rs  top_level.rs
crates/kind-pass/src/erasure/: mod.rs
crates/kind-pass/src/expand/: mod.rs  uses.rs
crates/kind-pass/src/inline/: mod.rs
crates/kind-pass/src/unbound/: mod.rs  subst.rs
crates/kind-project/: Cargo.toml
crates/kind-project/src/: error.rs  lib.rs  main.rs
crates/kind-project/src/fetcher/: git.rs  mod.rs
crates/kind-query/: Cargo.toml
crates/kind-query/src/: aliases.rs  build.rs  dep_tree.rs  dependency.rs  errors.rs  fetch.rs  file.rs  graph.rs  lib.rs  loader.rs  metadata.rs  names.rs  query.rs
crates/kind-report/: Cargo.toml
crates/kind-report/src/: data.rs  lib.rs  report.rs
crates/kind-report/src/report/: code.rs  mod.rs
crates/kind-report/src/report/mode/: classic.rs  compact.rs  mod.rs
crates/kind-syntax/: Cargo.toml
crates/kind-syntax/src/: concrete.rs  core.rs  lexemes.rs  lib.rs
crates/kind-target-hvm/: Cargo.toml
crates/kind-target-hvm/src/: lib.rs
crates/kind-target-kdl/: Cargo.toml
crates/kind-target-kdl/src/: compile.rs  diagnostic.rs  errors.rs  flatten.rs  lib.rs  linearize.rs  subst.rs
crates/kind-tests/: Cargo.toml  Teste.kind2
crates/kind-tests/benches/: pure.rs
crates/kind-tests/suite/checker/: Algebra.kind2  Checker.kind2  Eq.kind2  Inspection.golden  Inspection.kind2  Nat.kind2  NumberInName.kind2  Quicksort.kind2  SimpleOpen.kind2  SimpleOpenWithMotive.kind2  Subst.golden  SubstUnbound.kind2
crates/kind-tests/suite/checker/derive/: DoNotation.kind2  Eq.kind2  User.kind2  Vec.kind2
crates/kind-tests/suite/checker/fail/: MismatchOne.golden  MismatchOne.kind2  MismatchTwo.golden  MismatchTwo.kind2  SimpleOpenNoDerive.golden  SimpleOpenNoDerive.kind2  Unbound.golden  Unbound.kind2
crates/kind-tests/suite/checker/issues/: HvmReducesTooMuch.golden  HvmReducesTooMuch.kind2  MatchDerivationWithAll.golden  (+1 more)
crates/kind-tests/suite/coverage/: Bool.kind2
crates/kind-tests/suite/erasure/: Ignores.golden  Ignores.kind2  Removes.golden  Removes.kind2
crates/kind-tests/suite/eval/: AllFieldsDestruct.golden  AllFieldsDestruct.kind2  DoNotation.golden  Getters.golden  Getters.kind2  MatchMotive.kind2  NoMatch.golden  NoMatch.kind2  PatChar.golden  PatChar.kind2  Setters.golden  Setters.kind2  SimpleOpen.kind2  User.golden  User.kind2  VecMatch.kind2  With.golden  With.kind2
crates/kind-tests/suite/kdl/: ChangeName.golden  ChangeName.kind2  Constructor.golden  Constructor.kind2  ISSUE-491-2.golden  ISSUE-491-2.kind2  ISSUE-491.golden  ISSUE-491.kind2  Lambda.golden  Lambda.kind2  LinearizeVars.golden  LinearizeVars.kind2  LongNameChange.kind2  LongNameHash.golden  LongNameHash.kind2  NonInlineState.golden  NonInlineState.kind2  Operators.golden  Operators.kind2  RemoveNames.kind2  Run.golden  Run.kind2  Shortener.golden  Shortener.kind2  StillCalable.golden  U60.golden  U60.kind2  WithAttr.golden  WithAttr.kind2
crates/kind-tests/suite/lib/: NoMatch.kind2  String.kind2
crates/kind-tests/suite/run/: DoNotation.golden  DoNotation.kind2  GettersSyntax.kind2  MatchMotive.kind2  MuttersSyntax.golden  MuttersSyntax.kind2  NoMatch.golden  NoMatch.kind2  SettersSyntax.golden  SettersSyntax.kind2  SimpleOpen.kind2  TestWith.kind2  User.kind2  VecMatch.kind2  With.kind2
crates/kind-tests/tests/: mod.rs
crates/kind-tree/: Cargo.toml
crates/kind-tree/src/: concrete.rs  lib.rs  symbol.rs  telescope.rs
crates/kind-tree/src/concrete/: expr.rs  mod.rs  pat.rs  visitor.rs
crates/kind-tree/src/desugared/: mod.rs
crates/kind-tree/src/untyped/: mod.rs
src/kind-checker/: Cargo.toml
src/kind-checker/src/: checker.hvm  errors.rs  lib.rs  report.rs  to_hvm.rs
src/kind-checker/src/compiler/: mod.rs  tags.rs
src/kind-driver/: Cargo.toml
src/kind-driver/src/: errors.rs  glossary.rs  lib.rs  resolution.rs  session.rs
src/kind-macros/: Cargo.toml
src/kind-macros/src/: lib.rs
src/kind-query/: Cargo.toml
src/kind-query/src/: errors.rs  graph.rs  lib.rs  main.rs  names.rs  session.rs  store.rs
src/kind-query/src/core/: graph.rs  mod.rs  store.rs
src/kind-report/: Cargo.toml
src/kind-report/src/: data.rs  lib.rs  render.rs  report.rs
(+7697 files in other folders)
