[workspace]
members = [
  "crates/kind-cli",
  "crates/kind-tree",
  "crates/kind-span",
  "crates/kind-parser",
  "crates/kind-pass",
  "crates/kind-report",
  "crates/kind-checker",
  "crates/kind-driver",
  "crates/kind-report",
  "crates/kind-target-kdl",
  "crates/kind-target-hvm",
  "crates/kind-derive",
  "crates/kind-tests",
  "crates/kind-project",
  # "crates/kind-optimization",
  # "crates/kind-lint",
  # "crates/kind-query",
  # "crates/kind-macros",
]

[profile.test.package.hvm]
opt-level = 3

[profile.bench.package.hvm]
opt-level = 3
