cabal-version:      3.0
name:               kind-lang
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         victor.taelin@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -w

library
    import:           warnings
    exposed-modules:  Kind
                    , Kind.CLI
                    , Kind.Check
                    , Kind.CompileJS
                    , Kind.Env
                    , Kind.Equal
                    , Kind.Parse
                    , Kind.Reduce
                    , Kind.Show
                    , Kind.Type
                    , Kind.Util
    other-modules:    
    build-depends:    base ^>=4.20.0.0
                    , containers ==0.7
                    , parsec ==3.1.17.0
                    , ansi-terminal==1.1.1
                    , directory==1.3.8.3
                    , hs-highlight == 1.0.3
                    , filepath==1.5.2.0
                    , mtl==2.3.1
    hs-source-dirs:   src
    default-language: GHC2024

executable kind
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
                    , kind-lang
                    , ansi-terminal==1.1.1
                    , directory==1.3.8.3
                    , hs-highlight == 1.0.3
                    , filepath==1.5.2.0
                    , mtl==2.3.1
    hs-source-dirs:   app
    default-language: GHC2024
