cabal-version:      3.0
name:               kind2hs
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         victor.taelin@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -w

library
    import:           warnings
    exposed-modules:  Kind
                    , Core.Type
                    , Core.Env
                    , Core.Reduce
                    , Core.Equal
                    , Core.Check
                    , Core.Show
                    , Core.Parse
                    , Core.API
    other-modules:    
    build-depends:    base ^>=4.20.0.0
                    , containers ==0.7
                    , parsec ==3.1.17.0
    hs-source-dirs:   src
    default-language: GHC2024

executable kindc
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
                    , kind2hs
    hs-source-dirs:   app
    default-language: GHC2024
