cabal-version:      3.0
name:               kind-core
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         victor.taelin@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -w

library
    import:           warnings
    exposed-modules:  Kind
                    , Kind.Type
                    , Kind.Env
                    , Kind.Reduce
                    , Kind.Equal
                    , Kind.Check
                    , Kind.Show
                    , Kind.Parse
                    , Kind.API
                    , Kind.HighlightError
    other-modules:    
    build-depends:    base ^>=4.20.0.0
                    , containers ==0.7
                    , parsec ==3.1.17.0
                    , ansi-terminal==1.1.1
                    , directory==1.3.8.3
    hs-source-dirs:   src
    default-language: GHC2024

executable kindc
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
                    , kind-core
                    , ansi-terminal==1.1.1
                    , directory==1.3.8.3
    hs-source-dirs:   app
    default-language: GHC2024
