[package]
name = "kind-checker"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Type checker for the kind compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-tree = { path = "../kind-tree", version = "0.1.1" }
kind-span = { path = "../kind-span", version = "0.1.1" }
kind-report = { path = "../kind-report", version = "0.1.1" }

hvm = "1.0.6"

fxhash = "0.2.1"
im-rc = "15.1.0"