[package]
description = "Type checker for the kind compiler"
edition = "2021"
license = "MIT"
name = "kind-checker"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-report = {path = "../kind-report", version = "0.1.3"}
kind-span = {path = "../kind-span", version = "0.1.3"}
kind-tree = {path = "../kind-tree", version = "0.1.3"}

hvm = "1.0.9"

fxhash = "0.2.1"
im-rc = "15.1.0"
