[package]
name = "kind2"
version = "0.3.6"
edition = "2021"
description = "A pure functional functional language that uses the HVM."
repository = "https://github.com/Kindelia/Kind2"
license = "MIT"
keywords = ["functional", "language", "type-theory", "proof-assistant"]

[[bin]]
name = "kind2"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-driver  = { path = "../kind-driver", version = "0.1.0"  }
kind-report  = { path = "../kind-report", version = "0.1.0"  }
kind-checker = { path = "../kind-checker", version = "0.1.0"  }
kind-query = { path = "../kind-query", version = "0.1.0"  }

clap = { version = "4.0.10", features = ["derive"] }
anyhow = "1.0.66"