[package]
description = "A pure functional functional language that uses the HVM."
edition = "2021"
keywords = ["functional", "language", "type-theory", "proof-assistant"]
license = "MIT"
name = "kind2"
repository = "https://github.com/Kindelia/Kind2"
version = "0.3.8"

[[bin]]
name = "kind2"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-checker = {path = "../kind-checker", version = "0.1.2"}
kind-driver = {path = "../kind-driver", version = "0.1.2"}
kind-query = {path = "../kind-query", version = "0.1.2"}
kind-report = {path = "../kind-report", version = "0.1.2"}

anyhow = "1.0.66"
clap = {version = "4.0.10", features = ["derive"]}
