[package]
name = "kind-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-parser = { path = "../kind-parser", version = "0.1.0" }
kind-tree = { path = "../kind-tree", version = "0.1.0" }
kind-span = { path = "../kind-span", version = "0.1.0" }
kind-report = { path = "../kind-report", version = "0.1.0" }
kind-checker = { path = "../kind-checker", version = "0.1.0"  }
kind-pass = { path = "../kind-pass", version = "0.1.0"  }

kind-target-hvm = { path = "../kind-target-hvm" }
kind-target-kdl = { path = "../kind-target-kdl" }

hvm = "1.0.0"

anyhow = "1.0.66"
strsim = "0.10.0"
fxhash = "0.2.1"
dashmap = "5.4.0"