[package]
description = "Driver for the kind compiler"
edition = "2021"
license = "MIT"
name = "kind-driver"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-checker = {path = "../kind-checker", version = "0.1.2"}
kind-parser = {path = "../kind-parser", version = "0.1.2"}
kind-pass = {path = "../kind-pass", version = "0.1.2"}
kind-report = {path = "../kind-report", version = "0.1.2"}
kind-span = {path = "../kind-span", version = "0.1.2"}
kind-tree = {path = "../kind-tree", version = "0.1.2"}

kind-target-hvm = {path = "../kind-target-hvm", version = "0.1.0"}
kind-target-kdl = {path = "../kind-target-kdl", version = "0.1.0"}

hvm = "1.0.6"

anyhow = "1.0.66"
dashmap = "5.4.0"
fxhash = "0.2.1"
strsim = "0.10.0"
