[package]
name = "kind-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-span = {path = "../kind-span"}
kind-diagnostic = {path = "../kind-diagnostic"}

num-bigint = "0.4.3"
num-traits = "0.2.15"
thin-vec = "0.2.12"