[package]
description = "Module for creating and managing kind repositories"
edition = "2021"
license = "MIT"
name = "kind-project"
version = "0.1.0"

[[bin]]
name = "kind-project"
path = "src/main.rs"

[dependencies]
kind2 = {path = "../kind-cli", version = "0.3.9"}
kind-report = {path = "../kind-report", version = "0.1.2"}

anyhow = "1.0.66"
toml = "0.7.3"
serde = "1.0.160"
clap = {version = "4.0.10", features = ["derive"]}