[package]
edition = "2021"
name = "kind-query"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
kind-span = {path = "../kind-span"}
kind-syntax = {path = "../kind-syntax"}
petgraph = "0.6.2"
thin-vec = "0.2.12"
refl = "0.2.1"
intmap = "2.0.0"
