[package]
description = "Query module for the kind compiler"
edition = "2021"
license = "MIT"
name = "kind-query"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-checker = {path = "../kind-checker", version = "0.1.4"}
kind-parser = {path = "../kind-parser", version = "0.1.4"}
kind-pass = {path = "../kind-pass", version = "0.1.4"}
kind-report = {path = "../kind-report", version = "0.1.4"}
kind-span = {path = "../kind-span", version = "0.1.4"}
kind-target-hvm = {path = "../kind-target-hvm", version = "0.1.4"}
kind-tree = {path = "../kind-tree", version = "0.1.4"}

fxhash = "0.2.1"
pathdiff = "0.2.1"
