[package]
name = "kind-syntax"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-lexer = {path = "../kind-lexer"}
kind-span = {path = "../kind-span"}
thin-vec = "0.2.12"
num-bigint = "0.4.3"