[package]
name = "kind-target-kdl"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-span = { path = "../kind-span", version = "0.1.1" }
kind-tree = { path = "../kind-tree", version = "0.1.1" }
kind-report = { path = "../kind-report", version = "0.1.1" }
kind-derive = { path = "../kind-derive", version = "0.1.1" }

kindelia_lang = { git = "https://github.com/developedby/Kindelia/", branch = "kdl-lang-crate" }
linked-hash-map = "0.5.6"
tiny-keccak = "2.0.2"
fxhash = "0.2.1"