[package]
description = "KDL target for the kind compiler"
edition = "2021"
license = "MIT"
name = "kind-target-kdl"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-derive = {path = "../kind-derive", version = "0.1.4"}
kind-report = {path = "../kind-report", version = "0.1.4"}
kind-span = {path = "../kind-span", version = "0.1.4"}
kind-tree = {path = "../kind-tree", version = "0.1.4"}

fxhash = "0.2.1"
im-rc = "15.1.0"
kindelia_lang = "0.1.7"
linked-hash-map = "0.5.6"
tiny-keccak = "2.0.2"
