[package]
name = "kind-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-driver  = { path = "../kind-driver" }
kind-report  = { path = "../kind-report" }
kind-checker = { path = "../kind-checker" }
kind-query = { path = "../kind-query" }
pretty_assertions = "1.3.0"
ntest = "0.8.1"
walkdir = "2"
