[package]
name = "kind-tests"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
kind-driver  = { path = "../kind-driver" }
kind-parser = { path = "../kind-parser", version = "0.1.0" }
kind-tree = { path = "../kind-tree", version = "0.1.0" }
kind-span = { path = "../kind-span", version = "0.1.0" }
kind-report = { path = "../kind-report", version = "0.1.0" }
kind-checker = { path = "../kind-checker" }
kind-pass = { path = "../kind-pass" }

kind-target-hvm = { path = "../kind-target-hvm" }
kind-target-kdl = { path = "../kind-target-kdl" }

pretty_assertions = "1.3.0"
ntest = "0.8.1"
walkdir = "2"