[package]
edition = "2021"
license = "MIT"
name = "kind-tests"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
kind-checker = {path = "../kind-checker"}
kind-driver = {path = "../kind-driver"}
kind-parser = {path = "../kind-parser", version = "0.1.4"}
kind-pass = {path = "../kind-pass"}
kind-report = {path = "../kind-report", version = "0.1.4"}
kind-span = {path = "../kind-span", version = "0.1.4"}
kind-tree = {path = "../kind-tree", version = "0.1.4"}

kind-target-hvm = {path = "../kind-target-hvm"}
kind-target-kdl = {path = "../kind-target-kdl"}

ntest = "0.8.1"
pretty_assertions = "1.3.0"
walkdir = "2"
