[package]
name = "kind-tree"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hvm = "1.0.0"

kind-span = { path = "../kind-span", version = "0.1.0" }
linked-hash-map = "0.5.6"
fxhash = "0.2.1"