[package]
edition = "2021"
license = "MIT"
name = "kind-tree"
version = "0.1.4"

description = "Syntatic trees for Kind compiler"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hvm = "1.0.9"

fxhash = "0.2.1"
kind-span = {path = "../kind-span", version = "0.1.4"}
linked-hash-map = "0.5.6"
