[package]
name = "kind-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kind-parser = { path = "../kind-parser" }
kind-tree = { path = "../kind-tree" }
kind-span = { path = "../kind-span" }
kind-report = { path = "../kind-report" }
kind-checker = { path = "../kind-checker" }
kind-pass = { path = "../kind-pass" }
kind-target-hvm = { path = "../kind-target-hvm" }

strsim = "0.10.0"
fxhash = "0.2.1"
salsa-2022 = { git = "https://github.com/salsa-rs/salsa/", branch = "master" }
dashmap = "5.4.0"
eyre = "0.6.8"
notify-debouncer-mini = "0.2.1"