[package]
name = "kind-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.46"
syn = { version = "1.0.102", features = ["extra-traits", "full"] }
quote = "1.0"
lazy_static = "1.4.0"