[package]
name = "kind-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
fxhash = "0.2.1"

kind-parser = { path = "../kind-parser" }
kind-span = { path = "../kind-span" }
kind-report = { path = "../kind-report" }
kind-tree = { path = "../kind-tree" }
kind-pass = { path = "../kind-pass" }
kind-macros = { path = "../kind-macros" }